{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 126,
  "lineage": "c784c089-f988-f8bc-1305-d1b311a3acd0",
  "resources": [
    {
      "module": "module.app_gateway",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [
              {
                "max_capacity": 6,
                "min_capacity": 2
              }
            ],
            "backend": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/backendAddressPools/api-pool",
                "ip_addresses": [],
                "name": "api-pool"
              },
              {
                "fqdns": [],
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/backendAddressPools/frontend-pool",
                "ip_addresses": [],
                "name": "frontend-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "dedicated_backend_connection_enabled": false,
                "host_name": "",
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/backendHttpSettingsCollection/api-http",
                "name": "api-http",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 8000,
                "probe_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/probes/api-probe",
                "probe_name": "api-probe",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              },
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "dedicated_backend_connection_enabled": false,
                "host_name": "",
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/backendHttpSettingsCollection/frontend-http",
                "name": "frontend-http",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 3000,
                "probe_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/probes/frontend-probe",
                "probe_name": "frontend-probe",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGatewayWebApplicationFirewallPolicies/spendpilot-prod-appgw-waf",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/frontendIPConfigurations/public-frontend",
                "name": "public-frontend",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/publicIPAddresses/spendpilot-prod-appgw-pip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/frontendPorts/http",
                "name": "http",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/gatewayIPConfigurations/gateway-ip-config",
                "name": "gateway-ip-config",
                "subnet_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-vnet/subnets/appgw-subnet"
              }
            ],
            "global": [],
            "http2_enabled": false,
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/frontendIPConfigurations/public-frontend",
                "frontend_ip_configuration_name": "public-frontend",
                "frontend_port_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/frontendPorts/http",
                "frontend_port_name": "http",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/httpListeners/http-listener",
                "name": "http-listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw",
            "identity": [],
            "listener": [],
            "location": "centralindia",
            "name": "spendpilot-prod-appgw",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [
              {
                "host": "127.0.0.1",
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/probes/api-probe",
                "interval": 30,
                "match": [
                  {
                    "body": "",
                    "status_code": [
                      "200-399"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "api-probe",
                "path": "/health",
                "pick_host_name_from_backend_http_settings": false,
                "port": 0,
                "protocol": "Http",
                "proxy_protocol_header_enabled": false,
                "timeout": 30,
                "unhealthy_threshold": 3
              },
              {
                "host": "127.0.0.1",
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/probes/frontend-probe",
                "interval": 30,
                "match": [
                  {
                    "body": "",
                    "status_code": [
                      "200-399"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "frontend-probe",
                "path": "/",
                "pick_host_name_from_backend_http_settings": false,
                "port": 0,
                "protocol": "Http",
                "proxy_protocol_header_enabled": false,
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "",
                "backend_address_pool_name": "",
                "backend_http_settings_id": "",
                "backend_http_settings_name": "",
                "http_listener_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/httpListeners/http-listener",
                "http_listener_name": "http-listener",
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/requestRoutingRules/path-routing-rule",
                "name": "path-routing-rule",
                "priority": 100,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "PathBasedRouting",
                "url_path_map_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/urlPathMaps/spendpilot-path-map",
                "url_path_map_name": "spendpilot-path-map"
              }
            ],
            "resource_group_name": "spendpilot-rg",
            "rewrite_rule_set": [],
            "routing_rule": [],
            "sku": [
              {
                "capacity": 0,
                "name": "WAF_v2",
                "tier": "WAF_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {
              "application": "spend-control",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "platform-team",
              "project": "spend-control",
              "stack": "vm-docker"
            },
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [
              {
                "default_backend_address_pool_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/backendAddressPools/frontend-pool",
                "default_backend_address_pool_name": "frontend-pool",
                "default_backend_http_settings_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/backendHttpSettingsCollection/frontend-http",
                "default_backend_http_settings_name": "frontend-http",
                "default_redirect_configuration_id": "",
                "default_redirect_configuration_name": "",
                "default_rewrite_rule_set_id": "",
                "default_rewrite_rule_set_name": "",
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/urlPathMaps/spendpilot-path-map",
                "name": "spendpilot-path-map",
                "path_rule": [
                  {
                    "backend_address_pool_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/backendAddressPools/api-pool",
                    "backend_address_pool_name": "api-pool",
                    "backend_http_settings_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/backendHttpSettingsCollection/api-http",
                    "backend_http_settings_name": "api-http",
                    "firewall_policy_id": "",
                    "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/urlPathMaps/spendpilot-path-map/pathRules/api-rule",
                    "name": "api-rule",
                    "paths": [
                      "/api/*"
                    ],
                    "redirect_configuration_id": "",
                    "redirect_configuration_name": "",
                    "rewrite_rule_set_id": "",
                    "rewrite_rule_set_name": ""
                  }
                ]
              }
            ],
            "waf_configuration": [],
            "zones": [
              "1",
              "2",
              "3"
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "spendpilot-prod-appgw",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83"
          },
          "dependencies": [
            "module.app_gateway.azurerm_public_ip.this",
            "module.app_gateway.azurerm_web_application_firewall_policy.this",
            "module.network.azurerm_subnet.this",
            "module.network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_gateway",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/publicIPAddresses/spendpilot-prod-appgw-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.207.66.136",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "spendpilot-prod-appgw-pip",
            "resource_group_name": "spendpilot-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "application": "spend-control",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "platform-team",
              "project": "spend-control",
              "stack": "vm-docker"
            },
            "zones": [
              "1",
              "2",
              "3"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "spendpilot-prod-appgw-pip",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.backend_subnet_nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkSecurityGroups/spendpilot-prod-backend-nsg",
            "location": "centralindia",
            "name": "spendpilot-prod-backend-nsg",
            "resource_group_name": "spendpilot-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-appgw-to-api",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.60.0.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "application": "spend-control",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "platform-team",
              "project": "spend-control",
              "stack": "vm-docker"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "spendpilot-prod-backend-nsg",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.backend_subnet_nsg",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-vnet/subnets/backend-subnet",
            "network_security_group_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkSecurityGroups/spendpilot-prod-backend-nsg",
            "subnet_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-vnet/subnets/backend-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.backend_subnet_nsg.azurerm_network_security_group.this",
            "module.network.azurerm_subnet.this",
            "module.network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.backend_vms",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkInterfaces/spendpilot-prod-backend-nic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.60.20.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-vnet/subnets/backend-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "mac_address": "60-45-BD-AD-A3-06",
            "name": "spendpilot-prod-backend-nic",
            "private_ip_address": "10.60.20.4",
            "private_ip_addresses": [
              "10.60.20.4"
            ],
            "resource_group_name": "spendpilot-rg",
            "tags": {
              "application": "spend-control",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "platform-team",
              "project": "spend-control",
              "stack": "vm-docker"
            },
            "virtual_machine_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Compute/virtualMachines/spendpilot-prod-backend"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "spendpilot-prod-backend-nic",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83"
          },
          "dependencies": [
            "module.network.azurerm_subnet.this",
            "module.network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.backend_vms",
      "mode": "managed",
      "type": "azurerm_network_interface_application_gateway_backend_address_pool_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/backendAddressPools/api-pool",
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkInterfaces/spendpilot-prod-backend-nic/ipConfigurations/internal|/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/backendAddressPools/api-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkInterfaces/spendpilot-prod-backend-nic"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.app_gateway.azurerm_application_gateway.this",
            "module.app_gateway.azurerm_public_ip.this",
            "module.app_gateway.azurerm_web_application_firewall_policy.this",
            "module.backend_vms.azurerm_network_interface.this",
            "module.network.azurerm_subnet.this",
            "module.network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.data_vms",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkInterfaces/spendpilot-prod-data-ai-nic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.60.30.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-vnet/subnets/db-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "mac_address": "7C-ED-8D-9F-52-55",
            "name": "spendpilot-prod-data-ai-nic",
            "private_ip_address": "10.60.30.4",
            "private_ip_addresses": [
              "10.60.30.4"
            ],
            "resource_group_name": "spendpilot-rg",
            "tags": {
              "application": "spend-control",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "platform-team",
              "project": "spend-control",
              "stack": "vm-docker"
            },
            "virtual_machine_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Compute/virtualMachines/spendpilot-prod-data-ai"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "spendpilot-prod-data-ai-nic",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83"
          },
          "dependencies": [
            "module.network.azurerm_subnet.this",
            "module.network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.db_subnet_nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkSecurityGroups/spendpilot-prod-db-nsg",
            "location": "centralindia",
            "name": "spendpilot-prod-db-nsg",
            "resource_group_name": "spendpilot-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "11434",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-backend-to-ollama",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "10.60.20.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-backend-to-postgres",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.60.20.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "application": "spend-control",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "platform-team",
              "project": "spend-control",
              "stack": "vm-docker"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "spendpilot-prod-db-nsg",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.db_subnet_nsg",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-vnet/subnets/db-subnet",
            "network_security_group_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkSecurityGroups/spendpilot-prod-db-nsg",
            "subnet_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-vnet/subnets/db-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.db_subnet_nsg.azurerm_network_security_group.this",
            "module.network.azurerm_subnet.this",
            "module.network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_subnet_nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkSecurityGroups/spendpilot-prod-frontend-nsg",
            "location": "centralindia",
            "name": "spendpilot-prod-frontend-nsg",
            "resource_group_name": "spendpilot-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-appgw-to-frontend",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.60.0.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "application": "spend-control",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "platform-team",
              "project": "spend-control",
              "stack": "vm-docker"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "spendpilot-prod-frontend-nsg",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_subnet_nsg",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-vnet/subnets/frontend-subnet",
            "network_security_group_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkSecurityGroups/spendpilot-prod-frontend-nsg",
            "subnet_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-vnet/subnets/frontend-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.frontend_subnet_nsg.azurerm_network_security_group.this",
            "module.network.azurerm_subnet.this",
            "module.network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_vms",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkInterfaces/spendpilot-prod-frontend-nic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.60.10.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-vnet/subnets/frontend-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "mac_address": "70-A8-A5-29-47-BE",
            "name": "spendpilot-prod-frontend-nic",
            "private_ip_address": "10.60.10.4",
            "private_ip_addresses": [
              "10.60.10.4"
            ],
            "resource_group_name": "spendpilot-rg",
            "tags": {
              "application": "spend-control",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "platform-team",
              "project": "spend-control",
              "stack": "vm-docker"
            },
            "virtual_machine_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Compute/virtualMachines/spendpilot-prod-frontend"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "spendpilot-prod-frontend-nic",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83"
          },
          "dependencies": [
            "module.network.azurerm_subnet.this",
            "module.network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_vms",
      "mode": "managed",
      "type": "azurerm_network_interface_application_gateway_backend_address_pool_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/backendAddressPools/frontend-pool",
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkInterfaces/spendpilot-prod-frontend-nic/ipConfigurations/internal|/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/applicationGateways/spendpilot-prod-appgw/backendAddressPools/frontend-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkInterfaces/spendpilot-prod-frontend-nic"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.app_gateway.azurerm_application_gateway.this",
            "module.app_gateway.azurerm_public_ip.this",
            "module.app_gateway.azurerm_web_application_firewall_policy.this",
            "module.frontend_vms.azurerm_network_interface.this",
            "module.network.azurerm_subnet.this",
            "module.network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "appgw-subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-vnet/subnets/appgw-subnet",
            "name": "appgw-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "spendpilot-rg",
            "virtual_network_name": "spendpilot-prod-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "appgw-subnet",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83",
            "virtual_network_name": "spendpilot-prod-vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        },
        {
          "index_key": "backend-subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.20.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-vnet/subnets/backend-subnet",
            "name": "backend-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "spendpilot-rg",
            "virtual_network_name": "spendpilot-prod-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "backend-subnet",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83",
            "virtual_network_name": "spendpilot-prod-vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        },
        {
          "index_key": "db-subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.30.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-vnet/subnets/db-subnet",
            "name": "db-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "spendpilot-rg",
            "virtual_network_name": "spendpilot-prod-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "db-subnet",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83",
            "virtual_network_name": "spendpilot-prod-vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        },
        {
          "index_key": "frontend-subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.10.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-vnet/subnets/frontend-subnet",
            "name": "frontend-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "spendpilot-rg",
            "virtual_network_name": "spendpilot-prod-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "frontend-subnet",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83",
            "virtual_network_name": "spendpilot-prod-vnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.this",
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.60.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f206dc54-1518-40f5-864c-d09680b1b78a",
            "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-vnet",
            "location": "centralindia",
            "name": "spendpilot-prod-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "spendpilot-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.60.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-vnet/subnets/appgw-subnet",
                "name": "appgw-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.60.10.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-vnet/subnets/frontend-subnet",
                "name": "frontend-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkSecurityGroups/spendpilot-prod-frontend-nsg"
              },
              {
                "address_prefixes": [
                  "10.60.20.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-vnet/subnets/backend-subnet",
                "name": "backend-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkSecurityGroups/spendpilot-prod-backend-nsg"
              },
              {
                "address_prefixes": [
                  "10.60.30.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/virtualNetworks/spendpilot-prod-vnet/subnets/db-subnet",
                "name": "db-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/e1f5b4be-e0ba-4ccb-8708-a949458fcd83/resourceGroups/spendpilot-rg/providers/Microsoft.Network/networkSecurityGroups/spendpilot-prod-db-nsg"
              }
            ],
            "tags": {
              "application": "spend-control",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "platform-team",
              "project": "spend-control",
              "stack": "vm-docker"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "spendpilot-prod-vnet",
            "resource_group_name": "spendpilot-rg",
            "subscription_id": "e1f5b4be-e0ba-4ccb-8708-a949458fcd83"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.this"
          ]
        }
      ]
    }
  ]
}